tests/snapshots/basic__clean_up_deleted_file.snap
---
source: tests/basic.rs
assertion_line: 274
expression: repo
---
prefixes:
  - local: /tmp/path/to/local/files
    remote: /remote.php/dav/files/tester/test_folder
files: {}
