tests/snapshots/basic__impl.snap
---
source: tests/basic.rs
assertion_line: 46
expression: initialized.repository()
---
prefixes:
  - local: tests/data_basic
    remote: test_folder
files:
  ? prefix_id: 0
    path: dummy/please.jpg
  : - more-tags please
  ? prefix_id: 0
    path: foo/ignore.txt
  : - yellow
