tests/snapshots/basic__run_followup_sync_bidirectional.snap
---
source: tests/basic.rs
assertion_line: 235
expression: repo
---
prefixes:
  - local: /tmp/path/to/local/files
    remote: /remote.php/dav/files/tester/test_folder
files:
  "0:bar/baz/drat.pdf": []
  "0:bar/ok.pdf": []
  "0:dummy/please.jpg":
    - more-tags please
    - yellow
  "0:foo/ignore.txt":
    - red
    - yellow
