tests/snapshots/basic__run_initial_sync_bidirectional.snap
---
source: tests/basic.rs
assertion_line: 265
expression: initialized.repository()
---
prefixes:
  - local: tests/data_basic
    remote: /remote.php/dav/files/tester/test_folder
files:
  ? prefix_id: 0
    path: bar/baz/drat.pdf
  : - red
  ? prefix_id: 0
    path: bar/ok.pdf
  : - red
    - more-tags please
  ? prefix_id: 0
    path: dummy/please.jpg
  : - more-tags please
  ? prefix_id: 0
    path: foo/ignore.txt
  : - yellow
