tests/snapshots/basic__run_initial_sync_to_local.snap
---
source: tests/basic.rs
assertion_line: 196
expression: repo
---
prefixes:
  - local: /tmp/path/to/local/files
    remote: /remote.php/dav/files/tester/test_folder
files:
  ? prefix_id: 0
    path: bar/baz/drat.pdf
  : - red
  ? prefix_id: 0
    path: foo/ignore.txt
  : - yellow
