tests/snapshots/basic__run_initial_sync_to_remote.snap
---
source: tests/basic.rs
assertion_line: 233
expression: repo
---
prefixes:
  - local: /tmp/path/to/local/files
    remote: /remote.php/dav/files/tester/test_folder
files:
  "0:dummy/please.jpg":
    - more-tags please
  "0:foo/ignore.txt":
    - yellow
