tests/snapshots/basic__sync_with_unmapped_files.snap
---
source: tests/basic.rs
assertion_line: 237
expression: repo
---
prefixes:
  - local: /tmp/path/to/local/files
    remote: /remote.php/dav/files/tester/test_folder
files: {}
