tests/snapshots/basic__tagged_file_not_uploaded.snap
---
source: tests/basic.rs
assertion_line: 274
expression: repo
---
prefixes:
  - local: /tmp/path/to/local/files
    remote: /remote.php/dav/files/tester/test_folder
files:
  "0:single-file.txt": []
